WebCore/rendering/RenderTextControlMultiLine.cpp
@@ -77,6 +77,17 @@ void RenderTextControlMultiLine::forwardEvent(Event* event)
     RenderTextControl::forwardEvent(event);
 }
 
+float RenderTextControlMultiLine::getAvgCharWidth(AtomicString family)
+{
+    // Since Lucida Grande is the default font, we want this to match the width
+    // of Courier New, the default font for textareas in IE, Firefox and Safari Win.
+    // 1229 is the avgCharWidth value in the OS/2 table for Courier New.
+    if (family == AtomicString("Lucida Grande"))
+        return scaleEmToUnits(1229);
+
+    return RenderTextControl::getAvgCharWidth(family);
+}
+
 int RenderTextControlMultiLine::preferredContentWidth(float charWidth) const
 {
     int factor = static_cast<HTMLTextAreaElement*>(node())->cols();
