WebCore/rendering/RenderTextControlMultiLine.h
@@ -40,6 +40,7 @@ private:
 
     virtual bool nodeAtPoint(const HitTestRequest&, HitTestResult&, int x, int y, int tx, int ty, HitTestAction);
 
+    virtual float getAvgCharWidth(AtomicString family);
     virtual int preferredContentWidth(float charWidth) const;
     virtual void adjustControlHeightBasedOnLineHeight(int lineHeight);
     virtual int baselinePosition(bool firstLine, bool isRootLineBox) const;
